[tool.poetry]
name = "mogpe"
version = "0.1.0"
description = "GPflow/Tensorflow implementation of mixture of Gaussian process experts - uses sparse GPs and stochastic variational inference"
license = "Apache-2.0"
authors = ["Aidan Scannell <scannell.aidan@gmail.com>"]
repository = "https://github.com/aidanscannell/mogpe"

[tool.poetry.dependencies]
# dataclasses is built-in for python ^3.8 (but not earlier) and Poetry can't handle conditional dependencies in
# other packages (e.g. gpflow) so we set python ^3.8. Python 3.6 should work using pip...
python = "^3.8"
# tensorflow = "^2.4.0"
# tensorflow-probability = "^0.12.1"
# tensorflow-probability = ">=0.9.0"
numpy = ">=1.19.4"
matplotlib = "^3.3.3"
bunch = "^1.0.1"
# pandas = "^1.1.4"
palettable = "^3.3.0"
jupyter = "^1.0.0"
toml = "^0.10.2"
dataclasses = { version = "*", python = "^3.6.0" }
tensorflow-probability = "^0.12.2"
tensorflow = "^2.5.0"
gpflow = "^2.2.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
pyflakes = "^2.2.0"
Sphinx = "^3.4"
sphinx-rtd-theme = "^0.5.0"
recommonmark = "^0.6.0"
nbsphinx = "^0.8.0"
nbsphinx-link = "^1.1.0"
sphinx-autodoc-typehints = "^1.11.1"

[build-system]
requires = ["setuptools", "poetry_core>=1.0"]
build-backend = "poetry.core.masonry.api"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.poetry.extras]
docs = ["sphinx", "sphinx_rtd_theme"]
