[tool.poetry]
name = "mogpe"
version = "0.3.0"
description = "GPflow/Tensorflow implementation of mixture of Gaussian process experts - uses sparse GPs and stochastic variational inference"
license = "Apache-2.0"
authors = ["Aidan Scannell <scannell.aidan@gmail.com>"]
repository = "https://github.com/aidanscannell/mogpe"

[tool.poetry.dependencies]
# dataclasses is built-in for python ^3.8 (but not earlier) and Poetry can't handle conditional dependencies in
# other packages (e.g. gpflow) so we set python ^3.8. Python 3.6 should work using pip...
python = "^3.8"
numpy = ">=1.19.4"
tensorflow = "^2.5.0"
tensorflow-probability = "^0.14.0"
# gpflow = "^2.2.1"
gpflow = {path = "/Users/aidanscannell/Developer/forked-repos/gpflow", develop=true}
tensor-annotations = {git = "https://github.com/deepmind/tensor_annotations"}
matplotlib = "^3.2"
pandas = "^1.3.2"
scikit-learn = "^1.0.1"  # for test_train_split
dataclasses = { version = "*", python = "^3.6.0" }
bunch = "^1.0.1"
palettable = "^3.3.0"
jupyter = "^1.0.0"
toml = "^0.10.2"
PyYAML = "^6.0"


[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
pyflakes = "^2.2.0"
pytest = "^7.0.0"
Sphinx = "^3.4"
sphinx-rtd-theme = "^0.5.0"
recommonmark = "^0.6.0"
nbsphinx = "^0.8.0"
nbsphinx-link = "^1.1.0"
sphinx-autodoc-typehints = "^1.11.1"

[build-system]
requires = ["setuptools", "poetry_core>=1.0"]
build-backend = "poetry.core.masonry.api"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.poetry.extras]
docs = ["sphinx", "sphinx_rtd_theme"]
